VB/Lib/xcgui.bas

Declare Sub XEle_EnableFocus Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_EnableDrawFocus Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_EnableEvent_XE_PAINT_END Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_EnableBkTransparent Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_EnableBorder Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_EnableMouseThrough Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Function XEle_SetRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect, ByVal bRedraw As Boolean) As Boolean
Declare Sub XEle_SetRectLogic Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect, ByVal bRedraw As Boolean)
Declare Sub XEle_GetRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetRectLogic Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetClientRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_GetWndClientRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Function XEle_GetWidth Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_RectWndClientToEleClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_PointWndClientToEleClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point)
Declare Sub XEle_RectClientToWndClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_PointClientToWndClient Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point)
Declare Function XEle_AddEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hChildEle As Long) As Boolean
Declare Function XEle_InsertEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hChildEle As Long, ByVal hDestEle As Long) As Boolean
Declare Sub XELE_RemoveEle Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XEle_AddShape Lib "xcgui.dll" (ByVal hEle As Long, ByVal hShape As Long) As Boolean
Declare Sub XEle_ShowEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal bShow As Boolean)
Declare Function XEle_GetType Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHWND Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetHWINDOW Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetCursor Lib "xcgui.dll" (ByVal hEle As Long, ByVal hCursor As Long)
Declare Function XEle_GetCursor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetID Lib "xcgui.dll" (ByVal hEle As Long, ByVal id As Long)
Declare Function XEle_GetID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetParentEle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetBkColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetBkColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetBorderColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetBorderColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetTextColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetTextColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetFocusBorderColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XEle_GetFocusBorderColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetFont Lib "xcgui.dll" (ByVal hEle As Long, ByVal hFontx As Long)
Declare Function XEle_GetFont Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetAlpha Lib "xcgui.dll" (ByVal hEle As Long, ByVal alpha As Byte)
Declare Function XEle_GetChildCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetChildByIndex Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Function XEle_GetChildByID Lib "xcgui.dll" (ByVal hEle As Long, ByVal id As Long) As Long
Declare Function XEle_HitChildEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Sub XEle_BindLayoutObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal hLayout As Long)
Declare Function XEle_GetLayoutObject Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetUserData Lib "xcgui.dll" (ByVal hEle As Long, ByVal nData As Long)
Declare Function XEle_GetUserData Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_GetContentSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Sub XEle_SetCapture Lib "xcgui.dll" (ByVal hEle As Long, ByVal b As Boolean)
Declare Sub XEle_SetLayoutWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal nFlag As Long, ByVal nWidth As Long)
Declare Sub XEle_SetLayoutHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal nFlag As Long, ByVal nHeight As Long)
Declare Sub XEle_GetLayoutWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal pFlag As Long, ByVal pWidth As Long)
Declare Sub XEle_GetLayoutHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal pFlag As Long, ByVal pHeight As Long)
Declare Sub XEle_RedrawEle Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XEle_RedrawRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XEle_Destroy Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XEle_SetImage Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XEle_EnableTransparentChannel Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Function XEle_GetTemplateListItemID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XEle_GetTemplateListItemGroupID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XEle_SetToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal pText As String)
Declare Sub XEle_GetToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As String, ByVal nOutLen As Long)
Declare Sub XEle_EnableToolTip Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XEle_AdjustLayout Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XEle_RegEventTest Lib "xcgui.dll" (ByVal nEvent As Long, ByVal pParamType As Long) As Boolean
Declare Function XFont_Create Lib "xcgui.dll" (ByVal size As Long) As Long
Declare Function XFont_Create2 Lib "xcgui.dll" (ByVal pName As String, ByVal size As Long, ByVal bBold As Boolean, ByVal bItalic As Boolean, ByVal bUnderline As Boolean, ByVal bStrikeOut As Boolean) As Long
Declare Function XFont_CreateEx Lib "xcgui.dll" (ByVal pFontInfo As LOGFONTW) As Long
Declare Function XFont_CreateFromHFONT Lib "xcgui.dll" (ByVal hFont As Long) As Long
Declare Sub XFont_Destroy Lib "xcgui.dll" (ByVal hFontx As Long)
Declare Function XFont_GetHFONT Lib "xcgui.dll" (ByVal hFontx As Long) As Long
Declare Function XFrameWnd_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pTitle As String, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Function XFrameWnd_CreateEx Lib "xcgui.dll" (ByVal dwExStyle As Long, ByVal lpClassName As String, ByVal lpWindowName As String, ByVal dwStyle As Long, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Sub XFrameWnd_GetLayoutAreaRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRect As rect)
Declare Sub XFrameWnd_SetView Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hEle As Long)
Declare Function XFrameWnd_AddPane Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hPaneDest As Long, ByVal hPaneNew As Long, ByVal align As String) As Boolean
Declare Function XImage_LoadFile Lib "xcgui.dll" (ByVal pImageName As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadFileAdaptive Lib "xcgui.dll" (ByVal pImageName As String, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadFileRect Lib "xcgui.dll" (ByVal pImageName As String, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long) As Long
Declare Function XImage_LoadResAdaptive Lib "xcgui.dll" (ByVal id As Long, ByVal pType As String, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadRes Lib "xcgui.dll" (ByVal id As Long, ByVal pType As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadZip Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadZipAdaptive Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal x1 As Long, ByVal x2 As Long, ByVal y1 As Long, ByVal y2 As Long) As Long
Declare Function XImage_LoadZipRect Lib "xcgui.dll" (ByVal pZipFileName As String, ByVal pImageName As String, ByVal pPassword As String, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long) As Long
Declare Function XImage_LoadMemory Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadMemoryRect Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal bStretch As Boolean) As Long
Declare Function XImage_LoadMemoryAdaptive Lib "xcgui.dll" (ByVal pBuffer As Long, ByVal nSize As Long, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Long
Declare Function XImage_LoadFromImage Lib "xcgui.dll" (ByVal pImage As Long) As Long
Declare Function XImage_LoadFileFromExtractIcon Lib "xcgui.dll" (ByVal pImageName As String) As Long
Declare Function XImage_LoadFileFromHICON Lib "xcgui.dll" (ByVal hIcon As Long) As Long
Declare Function XImage_LoadFileFromHBITMAP Lib "xcgui.dll" (ByVal hBitmap As Long) As Long
Declare Function XImage_IsStretch Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_IsAdaptive Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_IsTile Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_SetDrawType Lib "xcgui.dll" (ByVal hImage As Long, ByVal ntype As Long) As Boolean
Declare Function XImage_SetDrawTypeAdaptive Lib "xcgui.dll" (ByVal hImage As Long, ByVal leftSize As Long, ByVal topSize As Long, ByVal rightSize As Long, ByVal bottomSize As Long) As Boolean
Declare Sub XImage_SetTranColor Lib "xcgui.dll" (ByVal hImage As Long, ByVal color As Long)
Declare Sub XImage_SetTranColorEx Lib "xcgui.dll" (ByVal hImage As Long, ByVal color As Long, ByVal tranColor As Byte)
Declare Sub XImage_EnableTranColor Lib "xcgui.dll" (ByVal hImage As Long, ByVal bEnable As Boolean)
Declare Sub XImage_EnableAutoDestroy Lib "xcgui.dll" (ByVal hImage As Long, ByVal bEnable As Boolean)
Declare Sub XImage_EnableCenter Lib "xcgui.dll" (ByVal hImage As Long, ByVal bCenter As Boolean)
Declare Function XImage_IsCenter Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_GetDrawType Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Function XImage_GetWidth Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Function XImage_GetHeight Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Sub XImage_Release Lib "xcgui.dll" (ByVal hImage As Long)
Declare Sub XImage_Destroy Lib "xcgui.dll" (ByVal hImage As Long)
Declare Function XLayout_Create Lib "xcgui.dll" () As Long
Declare Sub XLayout_Destroy Lib "xcgui.dll" (ByVal hLayout As Long)
Declare Sub XLayout_AddEle Lib "xcgui.dll" (ByVal hLayout As Long, ByVal hEle As Long)
Declare Sub XLayout_AddLayoutObject Lib "xcgui.dll" (ByVal hLayout As Long, ByVal hLayoutObject As Long)
Declare Sub XLayout_AddShape Lib "xcgui.dll" (ByVal hLayout As Long, ByVal hShape As Long)
